[package]
name = "shred-collector"
description = "Tool for collecting shreds from Solana network"
version = "2.1.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"
edition = "2021"

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
solana-clap-utils = { path = "../clap-utils", version = "=2.1.0" }
solana-core = { path = "../core", version = "=2.1.0" }
solana-gossip = { path = "../gossip", version = "=2.1.0" }
solana-logger = { path = "../logger", version = "=2.1.0" }
solana-net-utils = { path = "../net-utils", version = "=2.1.0" }
solana-perf = { path = "../perf", version = "=2.1.0" }
solana-sdk = { path = "../sdk", version = "=2.1.0" }
solana-streamer = { path = "../streamer", version = "=2.1.0" }
solana-version = { path = "../version", version = "=2.1.0" }
tokio = { version = "1.29.1", features = ["full"] }
