[package]
name = "shred-collector"
version = "2.1.0"
edition = "2021"

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
solana-clap-utils = { path = "../clap-utils" }
solana-core = { path = "../core" }
solana-gossip = { path = "../gossip" }
solana-ledger = { path = "../ledger" }
solana-net-utils = { path = "../net-utils" }
solana-runtime = { path = "../runtime" }
solana-sdk = { path = "../sdk" }
solana-streamer = { path = "../streamer" }
solana-logger = { path = "../logger" }
solana-accounts-db = { path = "../accounts-db" }
solana-rpc = { path = "../rpc" }
solana-poh = { path = "../poh" }
tokio = { version = "1.14.1", features = ["full"] }
crossbeam-channel = "0.5"
